@@ -2,6 +2,7 @@
 	* Add version to js file name
 	* Update extension requirements
 	* Update to composer.json
+	* Resolves #60428: cancel link on delete from does not work in in FF
 
 2015-12-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #72196: Adapt to Rsaauth of TYPO3 CMS 7
